[gd_scene load_steps=2 format=3 uid="uid://d33en75o5adm7"]

[ext_resource type="Script" uid="uid://doh4cc33w7nkf" path="res://addons/DogsToolkit/musiq/chord.gd" id="1_t2mx4"]

[node name="Chord" type="MarginContainer" groups=["chord"]]
offset_right = 165.0
offset_bottom = 164.0
script = ExtResource("1_t2mx4")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Basics" type="HBoxContainer" parent="Info"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ScaleDegree" type="LineEdit" parent="Info/Basics"]
layout_mode = 2
text = "1"
placeholder_text = "scale degree"
alignment = 1
expand_to_text_length = true
virtual_keyboard_type = 2
caret_blink = true
caret_mid_grapheme = true

[node name="Offset" type="SpinBox" parent="Info/Basics"]
layout_mode = 2
size_flags_horizontal = 10
min_value = -60.0
max_value = 67.0
prefix = "offset"

[node name="Shape" type="HBoxContainer" parent="Info"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Info/Shape"]
layout_mode = 2
text = "shape"

[node name="ShapeButton" type="OptionButton" parent="Info/Shape"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "auto"
popup/item_0/id = 0
popup/item_1/text = "major"
popup/item_1/id = 1
popup/item_2/text = "dom"
popup/item_2/id = 2
popup/item_3/text = "minor"
popup/item_3/id = 3
popup/item_4/text = "half-dim"
popup/item_4/id = 4
popup/item_5/text = "dim"
popup/item_5/id = 5

[node name="Inversion" type="HBoxContainer" parent="Info"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Info/Inversion"]
layout_mode = 2
text = "inversion"

[node name="InversionButton" type="OptionButton" parent="Info/Inversion"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "root"
popup/item_0/id = 0
popup/item_1/text = "1st"
popup/item_1/id = 1
popup/item_2/text = "2nd"
popup/item_2/id = 2

[node name="Closed" type="HBoxContainer" parent="Info"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Info/Closed"]
layout_mode = 2
text = "closed position"

[node name="ClosedToggle" type="CheckButton" parent="Info/Closed"]
layout_mode = 2

[node name="Position" type="HBoxContainer" parent="Info"]
layout_mode = 2
alignment = 1

[node name="Remove" type="Button" parent="Info/Position"]
layout_mode = 2
text = "X"

[node name="Length" type="LineEdit" parent="Info/Position"]
layout_mode = 2
text = "4"
placeholder_text = "Beats"

[node name="Left" type="Button" parent="Info/Position"]
layout_mode = 2
text = "<-"

[node name="Index" type="Label" parent="Info/Position"]
layout_mode = 2
text = "idx:0"

[node name="Right" type="Button" parent="Info/Position"]
layout_mode = 2
text = "->"

[connection signal="text_changed" from="Info/Basics/ScaleDegree" to="." method="_on_scale_degree_text_changed"]
[connection signal="value_changed" from="Info/Basics/Offset" to="." method="_on_offset_value_changed"]
[connection signal="item_selected" from="Info/Shape/ShapeButton" to="." method="_on_shape_button_item_selected"]
[connection signal="item_selected" from="Info/Inversion/InversionButton" to="." method="_on_inversion_button_item_selected"]
[connection signal="toggled" from="Info/Closed/ClosedToggle" to="." method="_on_option_button_toggled"]
[connection signal="pressed" from="Info/Position/Remove" to="." method="_on_remove_pressed"]
[connection signal="text_changed" from="Info/Position/Length" to="." method="_on_length_text_changed"]
[connection signal="pressed" from="Info/Position/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Info/Position/Right" to="." method="_on_right_pressed"]
